BA-240 fix height on scrollbar in blog series

--- a/web/wp-content/themes/borealis-2021/src/sass/style.scss
+++ b/web/wp-content/themes/borealis-2021/src/sass/style.scss
@@ -294,6 +294,10 @@
   line-height: 1.1;
 }
 
+.scrollbar-height::-webkit-scrollbar {
+  height: 10px;
+}
+
 @media (prefers-reduced-motion) {
   .underline-cta::before,
   .underline-cta:hover span {
